Overriding the update method for the event api

--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ DB_HOST=127.0.0.1
 CLOUDINARY_CLOUD_NAME=ebukvick
 CLOUDINARY_API_KEY=993699699432962
 CLOUDINARY_API_SECRET=U4ftPDDxYoZlkSoaMryRHnIJ5wI
+# my django secret
+SK=django-insecure-d$=)8eviipt0o&y_+pgah85$yj^(7t5l5u1+##%e3etymyq=ti
